// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminNavigation /> should render correctly - index 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-jqUVSM hehiTi"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigation__card-container"
    >
      <div
        class="sc-jqUVSM liWCTR"
      >
        <div
          class="sc-kDDrLX jqDTPj"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-jqUVSM liWCTR"
      >
        <div
          class="sc-kDDrLX jqDTPj"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-jqUVSM liWCTR"
      >
        <div
          class="sc-kDDrLX jqDTPj"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-jqUVSM liWCTR"
      >
        <div
          class="sc-kDDrLX jqDTPj"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with admin user 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="page-title__heading"
    >
      Admin
    </h1>
    <div
      class="admin-navigation__card-container"
    >
      <a
        aria-label="Debug settings"
        class="sc-crXcEl ibsSAm sc-hAZoDl ipFjCy admin-navigation__card"
        href="/debug"
      >
        <div
          class="sc-evZas etTfym"
        >
          <div
            class="sc-breuTD jcyuBN"
          />
          <div
            class="sc-ksZaOG bFaelV"
          >
            <div
              aria-hidden="true"
              class="sc-fnykZs kTzZGL"
            >
              <div
                class="sc-fEOsli jbzoHX date container"
              />
              <div
                class="sc-bjUoiL btReIK"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Debug settings
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Analytics"
        class="sc-crXcEl ibsSAm sc-hAZoDl ipFjCy admin-navigation__card"
        href="/admin/analytics"
      >
        <div
          class="sc-evZas etTfym"
        >
          <div
            class="sc-breuTD jcyuBN"
          />
          <div
            class="sc-ksZaOG bFaelV"
          >
            <div
              aria-hidden="true"
              class="sc-fnykZs kTzZGL"
            >
              <div
                class="sc-fEOsli jbzoHX date container"
              />
              <div
                class="sc-bjUoiL btReIK"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Analytics
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Emails"
        class="sc-crXcEl ibsSAm sc-hAZoDl ipFjCy admin-navigation__card"
        href="/admin/emails"
      >
        <div
          class="sc-evZas etTfym"
        >
          <div
            class="sc-breuTD jcyuBN"
          />
          <div
            class="sc-ksZaOG bFaelV"
          >
            <div
              aria-hidden="true"
              class="sc-fnykZs kTzZGL"
            >
              <div
                class="sc-fEOsli jbzoHX date container"
              />
              <div
                class="sc-bjUoiL btReIK"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Emails
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Notifications"
        class="sc-crXcEl ibsSAm sc-hAZoDl ipFjCy admin-navigation__card"
        href="/admin/notifications"
      >
        <div
          class="sc-evZas etTfym"
        >
          <div
            class="sc-breuTD jcyuBN"
          />
          <div
            class="sc-ksZaOG bFaelV"
          >
            <div
              aria-hidden="true"
              class="sc-fnykZs kTzZGL"
            >
              <div
                class="sc-fEOsli jbzoHX date container"
              />
              <div
                class="sc-bjUoiL btReIK"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Notifications
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Users"
        class="sc-crXcEl ibsSAm sc-hAZoDl ipFjCy admin-navigation__card"
        href="/admin/users"
      >
        <div
          class="sc-evZas etTfym"
        >
          <div
            class="sc-breuTD jcyuBN"
          />
          <div
            class="sc-ksZaOG bFaelV"
          >
            <div
              aria-hidden="true"
              class="sc-fnykZs kTzZGL"
            >
              <div
                class="sc-fEOsli jbzoHX date container"
              />
              <div
                class="sc-bjUoiL btReIK"
              >
                <h1
                  class="sc-gsnTZi cTWewb"
                >
                  Users
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with auth error 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-jqUVSM hehiTi"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigation__card-container"
    >
      <div
        class="sc-jqUVSM liWCTR"
      >
        <div
          class="sc-kDDrLX jqDTPj"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-jqUVSM liWCTR"
      >
        <div
          class="sc-kDDrLX jqDTPj"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-jqUVSM liWCTR"
      >
        <div
          class="sc-kDDrLX jqDTPj"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-jqUVSM liWCTR"
      >
        <div
          class="sc-kDDrLX jqDTPj"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
  <div
    class="subsection__outer loading-cover__overlay--content"
  >
    <h3
      class="subsection__heading subsection__heading--no-padding"
      id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
    >
      This is taking a while. Maybe something isn't quite right...
    </h3>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with initial state 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-jqUVSM hehiTi"
    >
      <div
        class="sc-kDDrLX jqDTPj"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigation__card-container"
    >
      <div
        class="sc-jqUVSM liWCTR"
      >
        <div
          class="sc-kDDrLX jqDTPj"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-jqUVSM liWCTR"
      >
        <div
          class="sc-kDDrLX jqDTPj"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-jqUVSM liWCTR"
      >
        <div
          class="sc-kDDrLX jqDTPj"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-jqUVSM liWCTR"
      >
        <div
          class="sc-kDDrLX jqDTPj"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with user 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="section__outer"
    >
      <h2
        class="section__heading"
        id="admin-only"
      >
        Admin only
      </h2>
      <span
        class="sc-fLlhyt boeWou"
      >
        You need to be logged in with an admin account to view this content.
        <br />
        <a
          class="sc-iBkjds kXOvCG"
          href="/login"
        >
          Got a different admin account? Log in here.
        </a>
      </span>
    </div>
  </div>
</div>
`;
